--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="wrapper">
@@ -12,13 +16,20 @@
         <h1>Login</h1>
         <div class="input-box">
           <input type="text" placeholder="Username" required />
+          <i class="bx bxs-user"></i>
         </div>
         <div class="input-box">
           <input type="password" placeholder="Password" required />
+          <i class="bx bx-lock"></i>
         </div>
         <div class="remember-forgot">
           <label for=""><input type="checkbox" />Remember me</label>
           <a href="#">Forgot password?</a>
+        </div>
+        <button type="submit" class="btn">Login</button>
+        <div class="register-link">
+          <p>Don't have an account?</p>
+          <a href="#">Register</a>
         </div>
       </form>
     </div>
