--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         </div>
         <button type="submit" class="btn">Login</button>
         <div class="register-link">
-          <p>Don't have an account?</p>
-          <a href="#">Register</a>
+          <p>Don't have an account? <a href="#">Register</a></p>
         </div>
       </form>
     </div>
